--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,23 @@
 body {
-  padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
 
 a {
   color: #00B7FF; }
-
+.jumbotron{
+  background: url("/images/trip_jumbotron.jpg") no-repeat left center;
+  background-size: cover;
+}
+.product_row{
+  display: flex;
+  flex-direction: row;
+  overflow: auto;
+  /* 미디어 쿼리로 모바일,데스크탑 나누기 overflow*/
+}
+.nav-pills{
+  margin-top: 4em;
+}
+.container{
+  margin-top: 7em;
+  margin-bottom: 3em;
+}
 /*# sourceMappingURL=style.css.map */
