--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,40 @@
 extends layout
 
+block hero-unit
+  nav.nav.nav-pills.nav-justified
+    a.nav-link.active(href="#") Active
+    a.nav-link(href="#") Longer nav link
+  .jumbotron
+    p.display-4 어디로 가세요?
+    form.form-inline
+      input.form-control.lr-sm-2(type="search", placeholder="Search", aria-label="Search")
+      button.btn.btn-outline-success.my-2.my-sm-0(type="submit") Search
+
 block content
-  h1= title
-  p Welcome to #{title}
+  .editor_recommend
+    h2 에디터 추천 여행지
+    .product_row
+      .product
+        div.card(style="width: 18rem;")
+          img.card-img-top(src="..." alt="Card image cap")
+          div.card-body
+            h5.card-title Card title
+            p.card-textSome quick example text to build on the card title and make up the bulk of the card's content.
+      .product
+        div.card(style="width: 18rem;")
+          img.card-img-top(src="..." alt="Card image cap")
+          div.card-body
+            h5.card-title Card title
+            p.card-textSome quick example text to build on the card title and make up the bulk of the card's content.
+      .product
+        div.card(style="width: 18rem;")
+          img.card-img-top(src="..." alt="Card image cap")
+          div.card-body
+            h5.card-title Card title
+            p.card-textSome quick example text to build on the card title and make up the bulk of the card's content.
+      .product
+        div.card(style="width: 18rem;")
+          img.card-img-top(src="..." alt="Card image cap")
+          div.card-body
+            h5.card-title Card title
+            p.card-textSome quick example text to build on the card title and make up the bulk of the card's content.
