--- a/views/includes/topnav.pug
+++ b/views/includes/topnav.pug
@@ -6,7 +6,13 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark.fixed-top
     span.navbar-toggler-icon
   #navbarSupportedContent.collapse.navbar-collapse
     ul.navbar-nav.ml-auto
+      if (!currentUser)
         li.nav-item
           a.nav-link(href='/signin') Signin
         li.nav-item
           a.nav-link(href='/users/new') Signup
+      else
+        li.nav-item
+          a.nav-link(href=`/users/${id}`) Mypage
+        li.nav-item
+          a.nav-link(href='/signout') Signout
