--- a/views/includes/topnav.pug
+++ b/views/includes/topnav.pug
@@ -1,4 +1,4 @@
-nav.navbar.navbar-expand-lg.navbar-dark.bg-dark.fixed-top
+nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
   a.navbar-brand(href="/")
     img.d-inline-block.align-top(src="../images/airplane.png", alt="my trip icon",width="30" ,height="30")
     |My trip
