--- a/views/index.pug
+++ b/views/index.pug
@@ -2,8 +2,8 @@ extends layout
 
 block hero-unit
   nav.nav.nav-pills.nav-justified
-    a.nav-link.active(href="#") Active
-    a.nav-link(href="#") Longer nav link
+      a.nav-link.active(href="#") 메인
+      a.nav-link(href="#") Longer nav link
   .jumbotron
     p.display-4 어디로 가세요?
     form.form-inline
