--- a/views/includes/topnav.pug
+++ b/views/includes/topnav.pug
@@ -24,7 +24,7 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
                     li.nav-item
                       a.nav-link(href=`/guides/${currentGuide._id}`) Guidepage
                     li.nav-item
-                      a.nav-link(href=`/users/${currentUser._id}`) Mypage
+                      a.nav-link(href=`/users/edit`) Mypage
                     li.nav-item
                       a.nav-link(href='/signout') Signout
                   when 'manager'
