--- a/views/guide/offer_course_new.pug
+++ b/views/guide/offer_course_new.pug
@@ -14,5 +14,31 @@ block content
         li.breadcrumb-item.active(aria-current='page') 코스 등록
     h2 코스 등록
     form(action = `guides/offer/${tour_id}`, method = 'post')
-      
+      .course_items
+      button.btn.btn-primary.btn-lg.btn-block#add_btn(type='button' onclick='Onclick()') 코스 추가
       button.btn.btn-primary(type='submit') 등록하기
+  script#itemTemplate(type="text/template")
+    .item.border
+      button.ml-2.mb-1.close(type='button', aria-label='Close',onclick='del(this)')
+        span(aria-hidden='true') &times;
+      .form-group
+            label(for='title') 코스 제목
+            input.form-control#title(type='text', name='title')
+      .form-group
+        label(for='hour') 소요 시간
+        - var n = 0;
+        select#hour.custom-select(name = 'hour')
+          while n<25
+            option(value= n)= n++
+        -n = 0;
+        select#minute.custom-select(name = 'minute')
+          while n<60
+            option(value= n)= n
+            - n = n+10
+      .form-group
+        label(for='description') 코스 내용
+        textarea.form-control#description( name='description', rows = '5',placeholder = "여행자들이 어떤 것을 기대할 수 있는지 사전에 머릿속에 그려볼 수 있도록 무엇을 하는 코스인지 자세하게 적어주세요.")
+      .form-group
+        label(for='photo') 코스 사진
+        input.form-control#photo( name='photo')
+  script(src="/javascripts/add_courseitem.js")
