--- a/views/includes/topnav.pug
+++ b/views/includes/topnav.pug
@@ -22,7 +22,7 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
               a.nav-link(href='/signout') Signout
           when 'guide'
             li.nav-item
-              a.nav-link(href=`guides/${currentGuide._id}`) Guidepage
+              a.nav-link(href=`guides/info`) Guidepage
             li.nav-item
               a.nav-link(href=`/users/${currentUser._id}/edit`) Mypage
             li.nav-item
