--- a/views/tour/tour_new.pug
+++ b/views/tour/tour_new.pug
@@ -1,11 +1,5 @@
 extends ../layout
 
-block hero-unit
-  nav.nav.nav-pills.nav-justified
-    a.nav-link(href=`/guides/info`) 정보관리
-    a.nav-link(href=`/guides/offer`) 나의 상품 목록
-    a.nav-link.active(href='/guides/offer/new') 상품등록
-
 block content
   .container
     nav(aria-label='breadcrumb')
@@ -13,7 +7,7 @@ block content
         li.breadcrumb-item.active(aria-current='page') 정보 등록
         li.breadcrumb-item 코스 등록
     h2 정보 등록
-    form(action = "/guides/offer/new", method = 'post')
+    form(action = "/tours/new", method = 'post')
       .place 장소
         .form-group
           .input-group.mb-3
