--- a/views/guide/edit.pug
+++ b/views/guide/edit.pug
@@ -6,7 +6,9 @@ block content
     form(action=`/guides/info?_method=put`, method='POST')
       .form-group
         label(for='guide_photo') 프로필 사진
-        input.form-control#guide_photo(type='text', name='guide_photo', value = guide.profile_photo)
+        img#preview.img-fluid(src=guide.profile_photo, alt="profile photo")
+        input.form-control-file#file(type="file")
+        input#url.form-control(type="text", readonly="readonly", name="img", value="")
       .form-group
         label(for='guide_name') 가이드명
         input.form-control#guide_name(type='text', name='guide_name', value = guide.name)
@@ -20,4 +22,5 @@ block content
         label(for='tel') 전화번호
         input.form-control#tel(type='tel', name='tel', value = guide.tele)
       button.btn.btn-primary(type='submit') 저장 
+  script(src="/javascripts/image.js")
     
