--- a/views/signin.pug
+++ b/views/signin.pug
@@ -3,14 +3,28 @@ extends layout
 block content
   .container
     .clearfix
-      form(action='/signin', method='POST')
-        h3 로그인
-        .form-group
-          label(for='email') Email address
-          input#email.form-control(type='email', name='email', placeholder='Email address', required, autofocus)
-        .form-group
-          label(for='password') Password
-          input#password.form-control(type='password', name='password', placeholder='Password', required, autofocus)
+      form.form-signin(action='/signin', method='POST')
+        h3.form-signin-heading Signin
+        label.sr-only(for='email') Email address
+        input(
+          type='email', id='email', name='email', class='form-control', 
+          placeholder='Email address', required, autofocus
+        )
+        label.sr-only(for='password') Password
+        input(
+          type='password', id='password', name='password', class='form-control', 
+          placeholder='Password', required, autofocus
+        )
+        .checkbox
+          label 
+            input(type="checkbox", value="remember-me")
+            |
+            | Remember me
         button.btn.btn-primary.btn-block(type='submit') Signin
-      div.sub 
-        a(href='/users/new') Signup
+        a.btn.btn-dark.btn-block(href='/auth/facebook')
+          i.fa.fa-facebook.fa-lg
+          | &nbsp;
+          | Signin with Facebook
+
+        div.sub 
+          a(href='/users/new') Signup
