--- a/views/tour/course_edit.pug
+++ b/views/tour/course_edit.pug
@@ -38,7 +38,9 @@ block content
               textarea.form-control#description( name='description', rows = '5',placeholder = "여행자들이 어떤 것을 기대할 수 있는지 사전에 머릿속에 그려볼 수 있도록 무엇을 하는 코스인지 자세하게 적어주세요.")= course.description
             .form-group
               label(for='photo') 코스 사진
-              input.form-control#photo( name='photo' , value = course.photo)
+              img#preview.img-fluid(src=guide.profile_photo, alt="course photo")
+              input.form-control-file#file(type="file")
+              input#url.form-control(type="text", readonly="readonly", name="photo", value="")
       button.btn.btn-primary.btn-lg.btn-block#add_btn(type='button' onclick='Onclick()') 코스 추가
       button.btn.btn-primary(type='submit') 등록하기
   script#itemTemplate(type="text/template")
@@ -64,5 +66,8 @@ block content
         textarea.form-control#description( name='description', rows = '5',placeholder = "여행자들이 어떤 것을 기대할 수 있는지 사전에 머릿속에 그려볼 수 있도록 무엇을 하는 코스인지 자세하게 적어주세요.")
       .form-group
         label(for='photo') 코스 사진
-        input.form-control#photo( name='photo')
+        input.form-control-file#file(type="file")
+        input#url.form-control(type="text", readonly="readonly", name="photo", value="")
+        img#preview.img-fluid(src="https://dummyimage.com/200x200/ccc/fff")
   script(src="/javascripts/add_courseitem.js")
+  script(src="/javascripts/image.js")
