--- a/views/tour/course_new.pug
+++ b/views/tour/course_new.pug
@@ -34,5 +34,8 @@ block content
         textarea.form-control#description( name='description', rows = '5',placeholder = "여행자들이 어떤 것을 기대할 수 있는지 사전에 머릿속에 그려볼 수 있도록 무엇을 하는 코스인지 자세하게 적어주세요.")
       .form-group
         label(for='photo') 코스 사진
-        input.form-control#photo( name='photo')
+        input.form-control-file#file(type="file", onclick='imagebtn(this)')
+        input#url.form-control(type="text", readonly="readonly", name="photo", value="")
+        img#preview.img-fluid(src="https://dummyimage.com/200x200/ccc/fff")
   script(src="/javascripts/add_courseitem.js")
+  
