--- a/views/tour/course_edit.pug
+++ b/views/tour/course_edit.pug
@@ -7,7 +7,7 @@ block content
         li.breadcrumb-item 정보 등록
         li.breadcrumb-item.active(aria-current='page') 코스 등록
     h2 코스 등록
-    form(action = `/tours/edit_course?_method=put`, method = 'post')
+    form(action = `/tours/edit_course/${coursies._id}?_method=put`, method = 'post')
       .course_items
         each course in coursies.course_items
           .item.border
@@ -38,7 +38,7 @@ block content
               textarea.form-control#description( name='description', rows = '5',placeholder = "여행자들이 어떤 것을 기대할 수 있는지 사전에 머릿속에 그려볼 수 있도록 무엇을 하는 코스인지 자세하게 적어주세요.")= course.description
             .form-group
               label(for='photo') 코스 사진
-              img#preview.img-fluid(src=guide.profile_photo, alt="course photo")
+              img#preview.img-fluid(src=course.photo, alt="course photo")
               input.form-control-file#file(type="file")
               input#url.form-control(type="text", readonly="readonly", name="photo", value="")
       button.btn.btn-primary.btn-lg.btn-block#add_btn(type='button' onclick='Onclick()') 코스 추가
@@ -66,8 +66,7 @@ block content
         textarea.form-control#description( name='description', rows = '5',placeholder = "여행자들이 어떤 것을 기대할 수 있는지 사전에 머릿속에 그려볼 수 있도록 무엇을 하는 코스인지 자세하게 적어주세요.")
       .form-group
         label(for='photo') 코스 사진
-        input.form-control-file#file(type="file")
+        input.form-control-file#file(type="file", onclick='imagebtn(this)')
         input#url.form-control(type="text", readonly="readonly", name="photo", value="")
         img#preview.img-fluid(src="https://dummyimage.com/200x200/ccc/fff")
   script(src="/javascripts/add_courseitem.js")
-  script(src="/javascripts/image.js")
