--- a/views/tour/tour_edit.pug
+++ b/views/tour/tour_edit.pug
@@ -35,7 +35,7 @@ block content
         input.form-control#title(type='text', name='title', value= tour.title)
       .form-group
         label(for='main_photo') 여행 사진
-        img#preview.img-fluid(src=guide.profile_photo, alt="profile photo")
+        img#preview.img-fluid(src=tour.main_photo, alt="profile photo")
         input.form-control-file#file(type="file")
         input#url.form-control(type="text", readonly="readonly", name="main_photo", value="")
       .form-group
@@ -52,4 +52,4 @@ block content
         input.form-control#max_people(type='text', name='max_people', value=tour.max_num_people)
       button.btn.btn-primary(type='submit') 코스 등록으로 넘어가기
       script(src='/javascripts/interactcity.js')
-      script(src="/javascripts/image.js")
+  script(src="/javascripts/image_edit.js")
