--- a/views/user/edit.pug
+++ b/views/user/edit.pug
@@ -1,11 +1,13 @@
 extends ../layout
 
-block hero-unit
-  nav.nav.nav-pills.nav-justified
-    a.nav-link.active(href=`/guides/${currentGuide._id}`) 정보관리
-    a.nav-link(href=`/guides/offer/${currentGuide._id}`) 나의 예약 목록
-    a.nav-link(href='/guides/offer') 장바구니
-
 block content
   .container
-    p testesetset
+    h1.main-title 정보관리
+    form(action=`/users/info/${user._id}`, method='POST')
+      .form-group
+        label(for='name') 이름
+        input.form-control#guide_name(type='text', name='name', value = user.name)
+      .form-group
+        label(for='user_profile') 생성일자
+        p= user.createdAt
+      button.btn.btn-primary(type='submit') 저장 
