--- a/views/guide/order_list_edit.pug
+++ b/views/guide/order_list_edit.pug
@@ -6,7 +6,7 @@ block content
     table.table.table-hover
       thead
         tr
-          th 투어 상품
+          th 예약자명
           th 예약 인원
           th 예약 날짜
           th 가격
