--- a/views/includes/topnav.pug
+++ b/views/includes/topnav.pug
@@ -48,15 +48,20 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
               a.nav-link(href='/signout') Signout
           when 'manager'
             li.nav-item
-              a.nav-link(href='/managers/user') managerpage
               .dropdown.mr-1
                 button#dropdownMenuOffset.btn.btn-secondary.dropdown-toggle(type='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false', data-offset='10,20')
                   | managerpage
                 .dropdown-menu(aria-labelledby='dropdownMenuOffset')
                   a.dropdown-item(href='/managers/user') 유저 관리
-                  a.dropdown-item(href=`/managers/offer`) 상품 관리
-                  a.dropdown-item(href='#') 화면 꾸미기
+                  a.dropdown-item(href=`/managers/offer_place`) 장소 관리
+                  a.dropdown-item(href='/managers/offer') 상품 관리
             li.nav-item
-              a.nav-link(href=`/users/${currentUser._id}/edit`) Mypage
+              .dropdown.mr-1
+                button#dropdownMenuOffset.btn.btn-secondary.dropdown-toggle(type='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false', data-offset='10,20')
+                  | Mypage
+                .dropdown-menu(aria-labelledby='dropdownMenuOffset')
+                  a.dropdown-item(href=`/users/info`) 정보관리
+                  a.dropdown-item(href=`/users/order`) 나의 예약 목록
+                  a.dropdown-item(href='/users/wish') 장바구니
             li.nav-item
               a.nav-link(href='/signout') Signout
