--- a/views/manager/user.pug
+++ b/views/manager/user.pug
@@ -15,13 +15,10 @@ block content
         each user in users
           tr
             td
-              a(href=`/users/${user._id}`)= user.name
+              a(href=`/managers/user/${user._id}`)= user.name
             td= user.email
             td= moment(user.createdAt).format('YYYY-MM-DD HH:mm:ss')
             td
-              a.btn.btn-sm.btn-outline-secondary(href=`/managers/${user._id}/edit`) 
-                | #[i.fa.fa-pencil] Edit
-              | 
-              a.btn.btn-sm.need-confirm-btn.btn-outline-danger(href=`/users/${user._id}?_method=DELETE`)
+              a.btn.btn-sm.need-confirm-btn.btn-outline-danger(href=`/managers/${user._id}?_method=DELETE`)
                 | #[i.fa.fa-trash] Delete
-    a.btn.btn-primary(href='/managers/new') #[i.fa.fa-plus] Register a new user
+    a.btn.btn-primary(href='/managers/user/new') #[i.fa.fa-plus] Register a new user
