--- a/views/user/edit.pug
+++ b/views/user/edit.pug
@@ -10,4 +10,6 @@ block content
       .form-group
         label(for='user_profile') 생성일자
         p= user.createdAt
-      button.btn.btn-primary(type='submit') 저장 
+      button.btn.btn-primary(type='submit') 저장
+      a.btn.btn-sm.need-confirm-btn.btn-outline-danger(href=`/users/${user._id}?_method=DELETE`)
+        | #[i.fa.fa-trash] 회원탈퇴
